--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@phosphor-icons/vue": "^2.2.1",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
