--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   },
   "dependencies": {
     "@phosphor-icons/vue": "^2.2.1",
+    "@primeuix/styled": "^0.7.0",
+    "@primevue/themes": "^4.3.6",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "pinia": "^2.2.6",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.6",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
@@ -37,7 +41,7 @@
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
-    "typescript": "~5.6.3",
+    "typescript": "^5.8.3",
     "vite": "^6.0.1",
     "vitest": "^2.1.5",
     "vue-tsc": "^2.1.10"
